src/regression_tests/snapshots/nixfmt_rs__regression_tests__parser__regression_implies_precedence.snap
---
source: src/regression_tests/parser.rs
description: a || b -> c
---
Operation
    [0;95;1m([0m Operation
        [0;96;1m([0m Term
            [0;93;1m([0m Token
                [0;35m([0m Ann
                    [0;36m{[0m preTrivia = fromList [0;33m[[0m[0;33m][0m
                    [0;36m,[0m sourceLine = Pos [0;92;1m1[0m
                    [0;36m,[0m value = Identifier [0;97;1m"[0m[0;94;1ma[0m[0;97;1m"[0m
                    [0;36m,[0m trailComment = Nothing
                    [0;36m}[0m
                [0;35m)[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value = TOr
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
        [0;96;1m([0m Term
            [0;93;1m([0m Token
                [0;35m([0m Ann
                    [0;36m{[0m preTrivia = fromList [0;33m[[0m[0;33m][0m
                    [0;36m,[0m sourceLine = Pos [0;92;1m1[0m
                    [0;36m,[0m value = Identifier [0;97;1m"[0m[0;94;1mb[0m[0;97;1m"[0m
                    [0;36m,[0m trailComment = Nothing
                    [0;36m}[0m
                [0;35m)[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
    [0;95;1m([0m Ann
        [0;96;1m{[0m preTrivia = fromList [0;93;1m[[0m[0;93;1m][0m
        [0;96;1m,[0m sourceLine = Pos [0;92;1m1[0m
        [0;96;1m,[0m value = TImplies
        [0;96;1m,[0m trailComment = Nothing
        [0;96;1m}[0m
    [0;95;1m)[0m
    [0;95;1m([0m Term
        [0;96;1m([0m Token
            [0;93;1m([0m Ann
                [0;35m{[0m preTrivia = fromList [0;36m[[0m[0;36m][0m
                [0;35m,[0m sourceLine = Pos [0;92;1m1[0m
                [0;35m,[0m value = Identifier [0;97;1m"[0m[0;94;1mc[0m[0;97;1m"[0m
                [0;35m,[0m trailComment = Nothing
                [0;35m}[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
